# ckanext-dge-scheming

./: README.md  requirements.txt  setup.cfg  setup.py
ckanext/: __init__.py
ckanext/dge_scheming/: __init__.py  constants.py  dcat_ap_es_dataservice.yaml  dcat_ap_es_dataset.yaml  helpers.py  nti_dge_dataservice.yaml  nti_dge_dataset.json  nti_dge_dataset.yaml  nti_dge_dataset_tags.json  plugin.py  presets.json  validators.py
ckanext/dge_scheming/i18n/: ckanext-dge_scheming.pot
ckanext/dge_scheming/i18n/ca/LC_MESSAGES/: ckanext-dge_scheming.mo  ckanext-dge_scheming.po
ckanext/dge_scheming/i18n/en/LC_MESSAGES/: ckanext-dge_scheming.mo  ckanext-dge_scheming.po
ckanext/dge_scheming/i18n/es/LC_MESSAGES/: ckanext-dge_scheming.mo  ckanext-dge_scheming.po
ckanext/dge_scheming/i18n/eu/LC_MESSAGES/: ckanext-dge_scheming.mo  ckanext-dge_scheming.po
ckanext/dge_scheming/i18n/gl/LC_MESSAGES/: ckanext-dge_scheming.mo  ckanext-dge_scheming.po
ckanext/dge_scheming/templates/scheming/display_snippets/: date_frequency.html  date_period.html  dge_multiple_text.html  multilanguage_markdown.html  multilanguage_tags.html  multilanguage_text.html  select_organization.html  uri_text.html
ckanext/dge_scheming/templates/scheming/error_snippets/: multiple_uri_text.html
ckanext/dge_scheming/templates/scheming/form_snippets/: _organization_select.html  date_frequency.html  date_period.html  dge_datetime.html  dge_datetime_deprecated.html  dge_datetime_issued.html  dge_datetime_modified.html  dge_help_popover.html  dge_help_text.html  dge_input_with_help.html  dge_organization.html  (+36 more)
(+1 files in other folders)
