[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dge_scheming/i18n/ckanext-dge_scheming.pot
width = 80

[init_catalog]
domain = ckanext-dge_scheming
input_file = ckanext/dge_scheming/i18n/ckanext-dge_scheming.pot
output_dir = ckanext/dge_scheming/i18n

[update_catalog]
domain = ckanext-dge_scheming
input_file = ckanext/dge_scheming/i18n/ckanext-dge_scheming.pot
output_dir = ckanext/dge_scheming/i18n
previous = true

[compile_catalog]
domain = ckanext-dge_scheming
directory = ckanext/dge_scheming/i18n
statistics = true